--- a/Week02.qmd
+++ b/Week02.qmd
@@ -4,7 +4,7 @@ title: "Week02"
 
 # Xaringan Presentation: Sentinel-2 satellites {.unnumbered}
 
-Copernicus is the earth observation programme launched by the European Space Agency(ESA), which can provide accurate, timely and easily accessible information to improve the living environments. To acquire the data, ESA developed the family of Sentinel satellites.
+Copernicus is the earth observation programme launched by the European Space Agency(ESA), which can provide accurate, timely and easily accessible information to improve the living environments. Currently, ESA has developed the family of Sentinel satellites.
 
 The presentation will focus on Sentinel-2 satellites, and introduce overview, applications and reflections. Besides, the presentation will be visualised by Xaringan.
 
