--- a/Week07.qmd
+++ b/Week07.qmd
@@ -140,24 +140,21 @@ Referring to [Geeksforgeeks(2023)](https://www.geeksforgeeks.org/support-vector-
 
 There are various classifiers for remote sensing data. Understanding the applications of these methods in previous studies and their accurate performance can help me further understand these classifiers. Based on a review of previous literature, Tamiminia et al.(2020) indicated that the most popular classifier was RF (49%), and the following are CART(13%) and SVM (11%). Figure 4 illustrates the accuracy performance of different classifiers, showing that all classifiers show a mean accuracy greater than 85%. Besides, the Decision Tree (DT) shows the best accuracy performance as the highest mean value, followed by CART. However, it is notable that RF demonstrates a greater variance in the mean value. Tamiminia et al. (2020) explained that, in some instances, this may be due to the low amount of training data that leads to misclassification.
 
-
 ![Figure 4 Overall accuracy of different classifiers. Source from Tamiminia et al.(2020)](source/week07/calssifier.jpg)
 
-In terms of the **Local Climate Zones (LCZs)** mentioned in the Week04 Application, previous studies employed multiple classifiers of supervised classification, such as maximum likelihood (Xu et al., 2022), convolutional neural network (CNN) (zhou et al., 2021), and RF (Chen et al., 2021, Danylo et al., 2016)). Taking the study of Chen et al.(2021) as an example, the following introduces the LCZ classification using RF. Chen et al.(2021) adopted the Sentiel-2 Level-2A product to classify the central part of Nanchang City, Jiangxi Province, China, into 13 LCZ classes. The training data with 46,542 pixels and test data with 14,569 pixels were independently selected and spatially dispersed. Then, spectral, textural, and polarimetric features are inputted in RF classification, and Figure 5 shows the classification  result. Although the differential accuracies are illustrated in different types of LCZ(Table 2), the overall accuracy result is 89.55%, performing the acceptable results. Overall, the application is a typical example of supervised classification steps, which provides deep insights for exploring supervised classification. The steps of supervised classification are complicated, requiring a large dataset and carefully designing and improving the workflow to improve the accuracy performance.
+In terms of the **Local Climate Zones (LCZs)** mentioned in the Week04 Application, previous studies employed multiple classifiers of supervised classification, such as maximum likelihood (Xu et al., 2022), convolutional neural network (CNN) (zhou et al., 2021), and RF (Chen et al., 2021, Danylo et al., 2016)). Taking the study of Chen et al.(2021) as an example, the following introduces the LCZ classification using RF. Chen et al.(2021) adopted the Sentiel-2 Level-2A product to classify the central part of Nanchang City, Jiangxi Province, China, into 13 LCZ classes. The training data with 46,542 pixels and test data with 14,569 pixels were independently selected and spatially dispersed. Then, spectral, textural, and polarimetric features are inputted in RF classification, and Figure 5 shows the classification result. Although the differential accuracies are illustrated in different types of LCZ(Table 2), the overall accuracy result is 89.55%, performing the acceptable results. Overall, the application is a typical example of supervised classification steps, which provides deep insights for exploring supervised classification. The steps of supervised classification are complicated, requiring a large dataset and carefully designing and improving the workflow to improve the accuracy performance.
 
 ::: {layout-ncol="2"}
-![Figrue 5 (a)The Ture Color Map and (b) the LCZs Classification Map. Source from Chen et al.(2021) ](source/week07/LCZ.png)
+![Figrue 5 (a)The Ture Color Map and (b) the LCZs Classification Map. Source from Chen et al.(2021)](source/week07/LCZ.png)
 
-![Table 2 Accuracy (%) of LCZs Classification.Source from Chen et al.(2021). <br/> PA:Producer’s accuracy. UA:User's accuracy.OA: Overall accuracy<br/> ](source/week07/accuracy.png)
+![Table 2 Accuracy (%) of LCZs Classification.Source from Chen et al.(2021). <br/> PA:Producer's accuracy. UA:User's accuracy.OA: Overall accuracy<br/>](source/week07/accuracy.png)
 :::
-
 
 # 3. Reflection {.unnumbered}
 
-In my undergraduate studies in urban planning and design, I often encountered limitations due to a lack of data, making it difficult to conduct large-scale urban research. For example, during the urban design course project on Bali island, I encountered significant difficulties due to the unavailability of detailed urban land cover data. However, through this week’s study, I have learned various classifiers for remote sensing image classification, and realised that machine learning could help urban planners identify and generate large-scale data, thus providing more possibilities for large-scale analysis of cities or regions. Furthermore, applying these classifiers can also assist me in delving deeper into the methods mentioned in week 04 for mitigating the urban heat island effect, such as LCZs and “Cooling” Roofs, demonstrating their broad applicability in practice.
+In my undergraduate studies in urban planning and design, I often encountered limitations due to a lack of data, making it difficult to conduct large-scale urban research. For example, during the urban design course project on Bali island, I encountered significant difficulties due to the unavailability of detailed urban land cover data. However, through this week's study, I have learned various classifiers for remote sensing image classification, and realised that machine learning could help urban planners identify and generate large-scale data, thus providing more possibilities for large-scale analysis of cities or regions. Furthermore, applying these classifiers can also assist me in delving deeper into the methods mentioned in week 04 for mitigating the urban heat island effect, such as LCZs and "Cooling" Roofs, demonstrating their broad applicability in practice.
 
-However, I also recognise that the choice of classifiers and procedure dramatically affects the accuracy performance. When I input the training set into GEE, the limited number of training samples and inaccurate delineation of land cover polygons resulted in issues with the final classification results. Therefore, in future applications,  it is essential to improve the procedures and the quality of training samples, which can improve the accuracy and reliability of the classification results.
-
+However, I also recognise that the choice of classifiers and procedure dramatically affects the accuracy performance. When I input the training set into GEE, the limited number of training samples and inaccurate delineation of land cover polygons resulted in issues with the final classification results. Therefore, in future applications, it is essential to improve the procedures and the quality of training samples, which can improve the accuracy and reliability of the classification results.
 
 # 4. Reference {.unnumbered}
 
@@ -168,9 +165,9 @@ Aziz, G., Minallah, N., Saeed, A., Frnda, J. and Khan, W. (2024). 'Remote sensin
 
 Bhatnagar, S., Gill, L. and Ghosh, B. (2020). 'Drone Image Segmentation Using Machine and Deep Learning for Mapping Raised Bog Vegetation Communities'. Remote Sensing, 12 (16), p. 2602. doi: 10.3390/rs12162602.
 
-Chen, C., Bagan, H., Xie, X., Tan, L. and Yamagata, Y. (2021). ‘Assessment of a Random Forest Classifier in Urban Local Climate Zone Classification Using Sentinel-2 and PALSAR-2’.* in 2021 IEEE International Geoscience and Remote Sensing Symposium IGARSS. IGARSS 2021 - 2021 IEEE International Geoscience and Remote Sensing Symposium,* Brussels, Belgium: IEEE, pp. 6797–6800. doi: 10.1109/IGARSS47720.2021.9553260.
+Chen, C., Bagan, H., Xie, X., Tan, L. and Yamagata, Y. (2021). 'Assessment of a Random Forest Classifier in Urban Local Climate Zone Classification Using Sentinel-2 and PALSAR-2'.\* in 2021 IEEE International Geoscience and Remote Sensing Symposium IGARSS. IGARSS 2021 - 2021 IEEE International Geoscience and Remote Sensing Symposium,\* Brussels, Belgium: IEEE, pp. 6797--6800. doi: 10.1109/IGARSS47720.2021.9553260.
 
-Danylo, O., See, L., Bechtel, B., Schepaschenko, D. and Fritz, S. (2016). ‘Contributing to WUDAPT: A Local Climate Zone Classification of Two Cities in Ukraine’. *IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing*, 9 (5), pp. 1841–1853. doi: 10.1109/JSTARS.2016.2539977.
+Danylo, O., See, L., Bechtel, B., Schepaschenko, D. and Fritz, S. (2016). 'Contributing to WUDAPT: A Local Climate Zone Classification of Two Cities in Ukraine'. *IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing*, 9 (5), pp. 1841--1853. doi: 10.1109/JSTARS.2016.2539977.
 
 Geeksforgeeks(2023) *Support vector machine in Machine Learning*. Available at: https://www.geeksforgeeks.org/support-vector-machine-in-machine-learning/ (Assessed: 08 March 2024)
 
@@ -192,11 +189,11 @@ Sirat, E. F., Setiawan, B. D. and Ramdani, F. (2018). 'Comparative Analysis of K
 
 Srivastava, A.(2021) *Support Vector Machines: SVM*. Available at: https://medium.com/analytics-vidhya/support-vector-machines-svm-87841ab63b8 (Assessed: 08 March 2024)
 
-Tamiminia, H., Salehi, B., Mahdianpari, M., Quackenbush, L., Adeli, S. and Brisco, B. (2020). ‘Google Earth Engine for geo-big data applications: A meta-analysis and systematic review’. *ISPRS Journal of Photogrammetry and Remote Sensing*, 164, pp. 152–170. doi: 10.1016/j.isprsjprs.2020.04.001.
+Tamiminia, H., Salehi, B., Mahdianpari, M., Quackenbush, L., Adeli, S. and Brisco, B. (2020). 'Google Earth Engine for geo-big data applications: A meta-analysis and systematic review'. *ISPRS Journal of Photogrammetry and Remote Sensing*, 164, pp. 152--170. doi: 10.1016/j.isprsjprs.2020.04.001.
 
 Vapnik V. ( 2006) *Estimation of Dependences Based on Empirical Data.* USA: Springer Science & Business Media
 
-Xu, X., Qiu, W., Li, W., Huang, D., Li, X. and Yang, S. (2022). ‘Comparing satellite image and GIS data classified local climate zones to assess urban heat island: A case study of Guangzhou’. *Frontiers in Environmental Science*, 10, p. 1029445. doi: 10.3389/fenvs.2022.1029445.
+Xu, X., Qiu, W., Li, W., Huang, D., Li, X. and Yang, S. (2022). 'Comparing satellite image and GIS data classified local climate zones to assess urban heat island: A case study of Guangzhou'. *Frontiers in Environmental Science*, 10, p. 1029445. doi: 10.3389/fenvs.2022.1029445.
 
-Zhou, Y., Wei, T., Zhu, X. and Collin, M. (2021). ‘A Parcel-Based Deep-Learning Classification to Map Local Climate Zones From Sentinel-2 Images’.* IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing*, 14, pp. 4194–4204. doi: 10.1109/JSTARS.2021.3071577.
+Zhou, Y., Wei, T., Zhu, X. and Collin, M. (2021). 'A Parcel-Based Deep-Learning Classification to Map Local Climate Zones From Sentinel-2 Images'.\* IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing\*, 14, pp. 4194--4204. doi: 10.1109/JSTARS.2021.3071577.
 :::
